mysql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
  namespace: testing 

spec:
  selector:
    matchLabels:
      app: mysql
  serviceName: mysql
  podManagementPolicy: Parallel
  # serviceAccountName: pv-sa
  replicas: 3
  template:
    metadata:
      labels:
        app: mysql
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mysql 
          image: mysql 
          ports:
            - containerPort: 3306
              name: mysql 
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql


  volumeClaimTemplates:
    - metadata:
        name: mysql-persistent-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
