phpmyadmin-deploy.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: testing 

spec:
  replicas: 3
  selector:
    matchLabels:
      app: phpmyadmin 
  template:
    metadata:
      labels:
        app: phpmyadmin 
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin
          ports:
            - containerPort: 80
