mysql-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: testing
  labels:
    app: mysql

spec:
  ports:
    - port: 3306
      name: mysql
  clusterIP: None 
  selector:
    app: mysql
