phpmyadmin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin 
  namespace: testing 

spec:
  selector:
    app: phpmyadmin
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
