phpmyadmin-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: phpmyadmin
  namespace: testing

spec:
  to:
    kind: Service
    name: phpmyadmin
  port:
    targetPort: 80
  tls:
    termination: edge
